--- a/src/Modal.css
+++ b/src/Modal.css
@@ -3,7 +3,6 @@
     top: 50%;
     left: 50%;
     width: 500px;
-    height: 300px;
     z-index: 3;
     transform: translate(-50%, -50%);
     background: #fff;
@@ -19,30 +18,45 @@
     background-color: rgba(0, 0, 0, 0.75);
 }
 
-.modal-content {
-    margin-top: 40px;
-}
-
 .close-btn {
     position: absolute;
-    right: 20px;
-    top: 15px;
+    right: 10px;
+    top: 5px;
+    color: black;
     cursor: pointer;
+    font-size: 20px;
 }
 
-label {
-    display: block;
-    font-size: 18px;
-  }
-  
-  input {
-    width: 300px;
-    height: 30px;
-    font-size: 30px;
-  }
+.modal-title {
+    border: 1px solid #DCDCDC;
+    padding: 15px;
+    font-size: 20px;
+}
 
-  login-form {
-      width: 100%;
-      margin: 0 auto;
-      margin-top: 70px;
-  }
+.modal-content {
+    margin-top: 5px;
+    padding: 12px;
+}
+
+
+.modal-footer {
+    border-top: 1px solid #DCDCDC;
+    margin: 5px;
+    padding: 12px;
+    display: flex;
+    justify-content: right;
+    
+}
+
+.button{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
